--- a/package.json
+++ b/package.json
@@ -23,14 +23,22 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "scripts": {
-    "test": "grunt test"
-  },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "angular": "^1.4.5",
+    "angular-mocks": "^1.4.5",
+    "chai": "^3.2.0",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chai": "^0.1.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.3.0",
+    "phantomjs": "^1.9.18"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
