--- a/.jshintrc
+++ b/.jshintrc
@@ -1,13 +1,55 @@
 {
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "sub": true,
-  "undef": true,
-  "boss": true,
-  "eqnull": true,
-  "node": true
+    "bitwise": true,
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "forin": true,
+    "immed": true,
+    "indent": 4,
+    "latedef": "nofunc",
+    "newcap": false,
+    "noarg": true,
+    "noempty": false,
+    "nonew": true,
+    "plusplus": false,
+    "quotmark": false,
+    "undef": false,
+    "unused": false,
+    "strict": false,
+    "maxparams": 10,
+    "maxdepth": 5,
+    "maxstatements": 40,
+    "maxcomplexity": 8,
+    "maxlen": 120,
+
+	"smarttabs": true,
+    "asi": true,
+    "boss": false,
+    "debug": true,
+    "eqnull": true,
+    "esnext": true,
+    "evil": false,
+    "expr": false,
+    "funcscope": false,
+    "globalstrict": false,
+    "iterator": false,
+    "lastsemic": false,
+    "laxbreak": true,
+    "laxcomma": true,
+    "loopfunc": true,
+    "maxerr": false,
+    "multistr": true,
+    "proto": false,
+    "scripturl": false,
+    "shadow": false,
+    "sub": true,
+    "supernew": false,
+    "validthis": false,
+
+    "browser": true,
+    "node": true,
+
+    "globals": {
+        "$": false
+    }
 }
